test/resolver/pass/resolve_stmt_import.ms
import { foo } from "foo_lib";
val x := foo;
val y := bar;
