test/resolver/fail/resolve_nested_binding.ms
val x := 1;
{
  val x := 2;
  x
};
